# scrapbox8

./: .gitignore  README.md
.github/: copilot-instructions.md
aws_sample/use-localstack/: README.md
aws_sample/use-localstack-terraform/: README.md
ir_sample/: README.md
ir_sample/cashflow-scanner/: README.md  main.py  requirements.txt
ir_sample/sample-hybrid-hyde-mqd/: README.md  answer.py  app.py  batch.py  cache.py  db.py  engine.py  integrator.py  main.py  processor.py  profiler.py  retriever.py  schema.py
ir_sample/sample-hyde/: README.md  db.py  hyde.py  main.py  rag.py  search.py  test_gemini.py
ir_sample/sample-ildm-ilam/: README.md  main.py  metrics.py
ir_sample/sample-intra-list-diversity/: README.md  main.py  metrics.py
ir_sample/sample-multi-query-decomposition/: README.md  engine.py  main.py  retriever.py  schema.py
ir_sample/simple-qdrant-sparse-retrieval/: .gitiginore  README.md
llm_sample/chain-of-hindsight/: README.md  prompt.md
llm_sample/chain-of-thought/: README.md  prompt.md
llm_sample/llm-react-app/: README.md  prompt.md  requirements.txt
llm_sample/llm-use-tools/: README.md  main.py  myllm.py  postprocess.py  room.py  tools.py
ml_sample/investment-meeting/: .gitignore  Makefile  README.md  example.py  pyproject.toml  requirements.txt
ml_sample/investment-meeting/src/: __init__.py  agents.py  main.py  mcp_server.py  moderator.py  reporter.py
ml_sample/investment-meeting/tests/: __init__.py  test_agents.py  test_integration.py  test_mcp.py  test_moderator.py  test_reporter.py
py_sample/: README.md
(+441 files in other folders)
